Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
             <p>You entered a cave, a lake stuck you but there is a boat by the lake, double click the picture to cross the lake</p>
             <img class="qwq" src="http://up.kukudesk.com/pic/04/e5/8b/04e58b86e1a6aefd27e44ef30e9bf594.jpg">
         </div>
-        
+        <div class="step4">
+            <p>You ran into a monster, couldn’t run it.</p>
+            <p class="tcr">Died!</p>
+            <img class="fix2" src="https://images.crazygames.com/games/temple-run-2/cover-1605932285883.png?auto=format,compress&q=75&cs=strip&ch=DPR&w=1200&h=630&fit=crop">
+        </div>
         <div class="clue-container">
             <p class="message-1"></p>
             <p class="message-2"></p>
